Fixed Navbar on Mobile

--- a/src/assets/mediaqueries.css
+++ b/src/assets/mediaqueries.css
@@ -7,29 +7,34 @@
   #hamburger-nav {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     background-color: #fff; /* Background color for the mobile menu */
     padding: 10px 20px;
     position: fixed;
     top: 0;
     width: 100%;
+    height: fit-content;
     z-index: 1000; /* Ensure it's above other content */
   }
 
   .hamburger-items {
     display: flex;
     align-items: center;
+    justify-content: space-around;
   }
 
   .nav-logo {
     margin-right: 20px;
     font-size: 24px;
+    margin-top: 20px;
+    cursor: pointer;
   }
 
   .hamburger-icon {
     display: flex;
     flex-direction: column;
     cursor: pointer;
+    margin-top: 20px;
   }
 
   .menu-links {
@@ -47,6 +52,10 @@
     gap: .5rem;
   }
 
+  a {
+    font-size: 12px;
+  }
+
   a:hover {
     text-decoration: none;
     
@@ -54,12 +63,14 @@
 
   .menu-links.open {
     display: flex;
-    flex-direction: c;
+    flex-direction: column;
+    font-size: 12px;
   }
 
   .menu-links a {
     text-decoration: none;
     padding: 10px 20px;
+    font-size: 12px;
   }
 
   .menu-links a:hover {
